--- a/.insomnia/Request/req_9916ce2b2ff54250be5189b2111bfb4f.yml
+++ b/.insomnia/Request/req_9916ce2b2ff54250be5189b2111bfb4f.yml
@@ -1,18 +1,17 @@
-_id: req_8b4c0f6347204758a2e5bfb453c69e98
+_id: req_9916ce2b2ff54250be5189b2111bfb4f
 type: Request
-parentId: fld_e26d89a61313401ea73432acb110954b
-modified: 1709839360073
-created: 1709592654409
-url: "{{ _.BASE }}auth/"
-name: login
+parentId: fld_ee428072a0a34e84a10a7d61e80c5622
+modified: 1709838848734
+created: 1709838840116
+url: "{{ _.BASE }}banking/exclude-pix"
+name: delete pix
 description: ""
-method: POST
+method: DELETE
 body:
   mimeType: application/json
   text: |-
     {
-    	"email": "jmjoao770@hotmail.com",
-    	"password": "teste"
+    	"type": "cpf"
     }
 parameters: []
 headers:
@@ -20,8 +19,10 @@ headers:
     value: application/json
   - name: User-Agent
     value: insomnia/2023.5.8
-authentication: {}
-metaSortKey: -1709592654409
+authentication:
+  type: bearer
+  token: "{{ _.token }}"
+metaSortKey: -1709748745067
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
